<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut_new_task"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_task"
        android:shortcutShortLabel="@string/shortcut_new_task_short"
        android:shortcutLongLabel="@string/shortcut_new_task_long">
        <intent
            android:action="com.franciscoabad.panchoos.ACTION_NEW_TASK"
            android:targetPackage="com.franciscoabad.panchoos"
            android:targetClass="com.franciscoabad.panchoos.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_capture"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_capture"
        android:shortcutShortLabel="@string/shortcut_capture_short"
        android:shortcutLongLabel="@string/shortcut_capture_long">
        <intent
            android:action="com.franciscoabad.panchoos.ACTION_QUICK_CAPTURE"
            android:targetPackage="com.franciscoabad.panchoos"
            android:targetClass="com.franciscoabad.panchoos.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_photo"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_camera"
        android:shortcutShortLabel="@string/shortcut_photo_short"
        android:shortcutLongLabel="@string/shortcut_photo_long">
        <intent
            android:action="com.franciscoabad.panchoos.ACTION_CAPTURE_PHOTO"
            android:targetPackage="com.franciscoabad.panchoos"
            android:targetClass="com.franciscoabad.panchoos.MainActivity" />
    </shortcut>
</shortcuts>
